--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
         "@types/koa": "^2.0.49",
         "@types/koa-bodyparser": "^4.3.0",
         "@types/koa-router": "^7.0.42",
-        "@types/mongodb": "^3.1.28",
+        "@types/mongodb": "^3.1.31",
         "@types/node": "^12.x.x",
         "JSONStream": "^1.3.5",
         "koa": "^2.7.0",
         "koa-bodyparser": "^4.2.1",
         "koa-router": "^7.4.0",
-        "le_node": "^1.8.0",
         "mongodb": "^3.2.7",
-        "node-server-utils": "0.0.18"
+        "node-server-utils": "0.0.18",
+        "r7insight_node": "^1.8.3"
     },
     "devDependencies": {
         "@types/jest": "^24.x.x",
@@ -49,7 +49,7 @@
         "prettier": "^1.18.2",
         "ts-jest": "^24.x.x",
         "ts-node": "^8.3.0",
-        "ts-node-dev": "^1.0.0-pre.32",
+        "ts-node-dev": "^1.0.0-pre.40",
         "tslint": "^5.18.0",
         "tslint-config-prettier": "^1.18.0",
         "typescript": "^3.5.3"
